Adds core folder, logger service, Adds working express

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "experimentalDecorators": true,
     "module": "es2015",
     "moduleResolution": "node",
-    "target": "es5",
-    "types": ["reflect-metadata"]
+    "target": "es6"
   },
   "exclude": [
     "node_modules"
