--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon dist/bundle.js",
     "build": "rollup -c",
     "dev": "rollup -c -w"
   },
@@ -11,23 +11,22 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "ejs": "^2.5.6",
-    "express": "~4.15.2",
-    "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.4.2"
+    "express": "~4.15.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.3",
+    "@types/debug": "^0.0.29",
     "@types/express": "^4.0.35",
-    "inversify": "^3.3.0",
-    "reflect-metadata": "^0.1.10",
     "rollup": "^0.41.6",
+    "rollup-plugin-gzip": "^1.1.0",
     "rollup-plugin-json": "^2.1.1",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
+    "rollup-plugin-paths": "^0.0.1",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-typescript2": "^0.4.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
+    "tslib": "^1.6.1",
     "tslint": "^5.1.0",
     "typescript": "latest"
   }
