--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2"
+    "express": "~4.15.2",
+    "uglify-es": "^3.0.15"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.3",
@@ -30,6 +31,7 @@
     "rollup-watch": "^3.2.2",
     "tslib": "^1.6.1",
     "tslint": "^5.1.0",
-    "typescript": "latest"
+    "typescript": "latest",
+    "typescript-require-latest-typescript": "^0.2.9-1"
   }
 }
