--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "rollup-watch": "^3.2.2",
     "tslib": "^1.6.1",
     "tslint": "^5.1.0",
-    "typescript": "latest",
+    "typescript": "^2.1.0",
     "typescript-require-latest-typescript": "^0.2.9-1"
   }
 }
